# io_scene_mvr

./: README.md  pyproject.toml
source/: __init__.py  blender_manifest.toml  export_mvr.py  import_gdtf.py  import_mvr.py
source/assets/gdtf/: Conventional.3ds  Head.3ds  NRGSille_Lighting@Simple_LED_PAR@rev1.gdtf  NRGSille_Lighting@Simple_LED_PAR@rev2.gdtf  Yoke.3ds
source/fixture_profiles/primitives/: Base.3ds
source/wheels/: io_scene_3ds-2.7.6-py3-none-any.whl  io_scene_3ds-2.7.8-py3-none-any.whl  io_scene_3ds-2.8.2-py3-none-any.whl  py_gdtf-1.0.4-py3-none-any.whl  py_mvr-0.4.0-py3-none-any.whl  py_mvr-0.5.0-py3-none-any.whl  py_mvr-0.6.0-py3-none-any.whl  pymvr-1.0.3.dev2-py3-none-any.whl  pymvr-1.0.4.dev0-py3-none-any.whl
