# SPDX-License-Identifier: GPL-2.0-or-later

[tool.autopep8]
max_line_length = 120
ignore = ["E721", "E722", "E402", "W690"]
aggressive = 2

[project]
name = "io_scene_mvr"
version = "1.4.3"
authors = [{ name="Sebastian Sille", email="getmore@nrgsille.com" },]
description = "My Virtual Rig and General Device Type Format"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL Approved :: GPL-2.0-or-later",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/nrgsille76/io_scene_mvr"
Homepage = "https://extensions.blender.org/add-ons/io-scene-mvr"
Issues = "https://github.com/nrgsille76/io_scene_mvr/issues"

[tool.poetry]
name = "io_scene_mvr"
version = "1.4.3"
description = "My Virtual Rig and General Device Type Format"
license = "GPL-2.0-or-later"
authors = ["Sebastian", "Vanous"]
maintainers = ["Sebastian Sille <getmore@nrgsille.com>"]
readme = "README.md"
homepage = "https://extensions.blender.org/add-ons/io-scene-mvr"
repository = "https://github.com/nrgsille76/io_scene_mvr"

[tool.poetry.dependencies]
python = "^3"
